# ihome-agents

./: README.md  recommendations.md
analysis/: intraday_factors.py
research_stocks/: README.md  pyproject.toml
research_stocks/docs/: pattern_analysis_documentation.md
research_stocks/src/research_stocks/: crew.py  main.py
research_stocks/src/research_stocks/config/: agents.yaml  tasks.yaml
research_stocks/src/research_stocks/tools/: advanced_pattern_helpers.py  etf_formatter_tool.py  market_data_tools.py  ohlc_formatter_tool.py  old_run.py  run_analysis.py  run_pattern_analysis.py  sec_tools.py  test_forecast_signal_tool.py  test_ohlc_patterns.py  test_pattern_recognition_tool.py  test_political_tool.py
research_stocks/src/research_stocks/tools/pattern_analysis/: README.md  __init__.py  backtesting.py  candlestick_patterns.py  chart_patterns.py  data_fetchers.py  forecast_utils.py  forecasting.py  intraday_factors.py  main.py  pattern_analyzer.py  pattern_filters.py  reporting.py  utils.py
research_stocks/src/research_stocks/tools/pattern_analysis/test/: test_nvda_forecast.py
research_stocks/src/research_stocks/tools/prompt/: prompt-model-v1  prompt-model-v2  prompt-model-v3  prompt-model-v4
