[project]
name = "research_stocks"
version = "0.1.0"
description = "research_stocks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
research_stocks = "research_stocks.main:run"
run_crew = "research_stocks.main:run"
train = "research_stocks.main:train"
replay = "research_stocks.main:replay"
test = "research_stocks.main:test"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.85.0"}
python-dotenv = "^1.0.1"
html2text = "^2024.2.26"
sec-api = "^1.0.20"

[tool.poetry.scripts]
stock_analysis = "stock_analysis.main:run"
train = "stock_analysis.main:train"

[tool.poetry.group.dev.dependencies]
setuptools = ">=68"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
